# plasma-desktop-run-command

./: CHANGELOG.md  CMakeLists.txt  README.md  helper.sh
.github/workflows/: build-and-package.yml
src/: Config.ui  RunCommand.cpp  RunCommand.hpp  config.ui  metadata.desktop  plasma-containmentactions-runcommand.desktop  runcommand.cpp  runcommand.hpp
